--- a/project1/index.html
+++ b/project1/index.html
@@ -1,6 +1,7 @@
 <html lang="en">
 <html>
 <head>
+    <meta charset="UTF-8">
 <title>CMST 385 Project 1: Home - JPine</title>
 </head>
     <h1>HELLO WORLD</h1>
