--- a/project3/music.html
+++ b/project3/music.html
@@ -42,7 +42,7 @@
                 </ul>
                 <figure>
                     <a href="https://en.wikipedia.org/wiki/Alanis_Morissette">
-                        <img src="imgs/Now Is The Time.jpg" alt="Now Is The Time" class="float-image">
+                        <img src="imgs/Now_Is_The_Time.jpg" alt="Now Is The Time" class="float-image">
                     </a>
                     <figcaption>Image of Now Is The Time. Source: <a href="https://en.wikipedia.org/wiki/Alanis_Morissette">Wikipedia</a></figcaption>
                 </figure>
@@ -54,7 +54,7 @@
                 </ul>
                 <figure>
                     <a href="https://en.wikipedia.org/wiki/Alanis_Morissette">
-                        <img src="imgs/Jagged Little Pill.jpg" alt="Jagged Little Pill" class="float-image">
+                        <img src="imgs/Jagged_Little_Pill.jpg" alt="Jagged Little Pill" class="float-image">
                     </a>
                     <figcaption>Image of Jagged Little Pill. Source: <a href="https://en.wikipedia.org/wiki/Alanis_Morissette">Wikipedia</a></figcaption>
                 </figure>
